--- a/Frontend/GenereerRonde.html
+++ b/Frontend/GenereerRonde.html
@@ -6,15 +6,15 @@
     <script src="http://kendo.cdn.telerik.com/2017.3.913/js/jquery.min.js"></script>
     <script src="http://kendo.cdn.telerik.com/2017.3.913/js/kendo.all.min.js"></script>
     <script>
-        $( document ).ready(function() {
-            $("#ronde").kendoDropDownList({
+        jQuery( document ).ready(function() {
+            jQuery("#ronde").kendoDropDownList({
                 dataTextField: "naam",
                 dataValueField: "id",
                 dataSource: {
                     transport: {
                         read: {
                             dataType: "json",
-                            url: "../controllers/get.php?action=getRondes",
+                            url: "index.php?option=com_jumi&fileid=22&format=raw&action=getRondes",
                         }
                     },
                     schema: {
@@ -24,17 +24,17 @@
                     }
                 }
             });
-            var validatable = $("#form").kendoValidator().data("kendoValidator");
-            $("#genereerRonde").click(function() {
+            var validatable = jQuery("#form").kendoValidator().data("kendoValidator");
+            jQuery("#genereerRonde").click(function() {
                 if (validatable.validate()) {
                     if(confirm("De ronde wordt gegenereerd. Bent u zeker? ")) {
-                        $.post("../controllers/post.php", {action: "generateWedstrijden", ronde_id: $("#ronde").data("kendoDropDownList").value()}, 
+                        jQuery.post("index.php?option=com_jumi&fileid=23&format=raw&post.php", {action: "generateWedstrijden", ronde_id: jQuery("#ronde").data("kendoDropDownList").value()}, 
                             function(data){
                                 if(data["success"]) {
-                                    $("#ok").show();
+                                    jQuery("#ok").show();
                                 } else {
-                                    $("#error").text(data["error"]);
-                                    $("#error").show();
+                                    jQuery("#error").text(data["error"]);
+                                    jQuery("#error").show();
                                 }
                             }, "json"
                         )
