Vereenvoudigen invullen wedstrijden

--- a/Frontend/VulWedstrijdIn.html
+++ b/Frontend/VulWedstrijdIn.html
@@ -141,7 +141,7 @@
                     </tr>
                 </tbody>
             </table>            
-            <input id="vulWedstrijdIn" class = 'btn btn-success' style="margin-top: 2em;" type="button" value="Bevestigen">
+            <input id="vulWedstrijdIn" class = 'btn btn-danger' style="margin-top: 2em;" type="button" value="Bevestigen">
             <input id="keerTerug" class = 'btn btn-secondary' style="margin-top: 2em;" type="button" value="Annuleren" onclick="window.history.go(-1); return false;">
         </div>
     
